DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2008-01-13 patrick  Folded vpr::SocketBasicOpt and vpr::SocketIpOpt into
                    vpr::Socket_t<T>. Folded vpr::SocketStreamOpt into
                    vpr::SocketStream_t<T>. Folded vpr::SocketDatagramOpt into
                    vpr::SocketDatagram_t<T>. Removed vpr::SocketOptionWrapper.
                    NEW VERSION: 2.1.10
2008-01-12 patrick  Extended vpr::SocketStream to support "corked" or no-push
                    writing.
                    NEW VERSION: 2.1.9
2007-10-30 patrick  Improved const correctness in the statistics collection
                    classes vpr::BandwidthIOStatsStrategy and
                    vpr::SampleLimitedStatCollector<T,bool>.
                    NEW VERSION: 2.1.8
2007-09-16 patrick  Removed polymorphism from vpr::BaseThread and vpr::Thread.
                    NEW VERSION: 2.1.7
2007-09-16 patrick  Added vpr::ThreadWin32::setRunOn() and
                    vpr::ThreadWin32::getRunOn(). Added Linux-specific
                    implementations of vpr::ThreadPosix::setRunOn() and
                    vpr::ThreadPosix::getRunOn(). Changed
                    vpr::Thread::getRunOn() so that it now returns
                    std::vector<unsigned int>.
                    NEW VERSION: 2.1.6
2007-09-06 patrick  Implemented stack trace printing on Mac OS X.
2007-09-04 patrick  Set VPR_BASE_DIR automatically on all platforms.
2007-08-21 patrick  Removed support for SPROC.
                    NEW VERSION: 2.1.5
2007-07-24 aronb    vpr::Library::findSymbol() throws vpr::LibraryException if
                    the library has not been loaded.
2007-07-08 patrick  Debug-enabled code linked against the release runtime on
                    Windows is now named the same as optimized code. The debug
                    DLLs are installed in the "debug" subdirectory.