@@ -556,6 +556,10 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm"
 			>
 			<File
+				RelativePath="..\..\modules\vapor\vpr\IO\Socket\AveragingAllocationStrategy.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\modules\vapor\vpr\IO\Stats\BandwidthIOStatsStrategy.cpp"
 				>
 			</File>
@@ -848,6 +852,10 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc"
 			>
+			<File
+				RelativePath="..\..\modules\vapor\vpr\IO\Socket\AveragingAllocationStrategy.h"
+				>
+			</File>
 			<File
 				RelativePath="..\..\modules\vapor\vpr\Util\Assert.h"
 				>
